tests/compile-fail/lexer/unrecognized.stderr
error: Unexpected token
  ┌─ /home/nixon/git/skate/./tests/compile-fail/lexer/unrecognized.sk:2:11
  │
2 │     let x := 2;
  │           ^
  │
  = Expected: "="

